--- a/src/views/templateEmail.jade
+++ b/src/views/templateEmail.jade
@@ -1,5 +1,5 @@
 - var logoUrl = 'https://s3-todo-uploads.s3.ap-southeast-1.amazonaws.com/defaults/vueLogo.png';
-- var url = `http://localhost:9998/api/member/add-by-email?projectId='${projectInfos.id}'&email='${destEmail}'`;
+- var url = `${host}/api/member/add-by-email?projectId="${projectInfos.id}"&email="${destEmail}"`;
 
 doctype html
 html
